2005-04-25 Mikhail Khodjaiants
	Added the new source container type (CDirectorySourceContainer) to provide 
	the UI support for the subfolders search.
	* ICDebugHelpContextIds.java
	+ CDirectorySourceContainerBrowser.java
	+ CDirectorySourceContainerDialog.java
	* SourceContainerWorkbenchAdapter.java
	* SourceLookupUIMessages.properties
	* plugin.xml

2005-04-22 Mikhail Khodjaiants
	Initalize the particiapants of the source lookup director when converting 
	from an old memento.
	* DefaultSourceLocator.java

2005-04-21 Mikhail Khodjaiants
	Changed the labels of the "Source Lookup Path" preference page to "Common Source Lookup Path".
	* PreferenceMessages.properties
	* plugin.properties

2005-04-21 Mikhail Khodjaiants
	Bug 92292: [artwork] "Instruction Stepping Mode" image is same as "Use Step Filters".
	* icons/dlcl16/instr_step.gif
	* icons/elcl16/instr_step.gif

2005-04-21 Mikhail Khodjaiants
	Replaced deprecated methods.
	* CBreakpointPropertiesAction.java
	* CBreakpointPropertiesRulerAction.java
	* ModulesPropertiesActionDelegate.java
	* SignalPropertiesActionDelegate.java

2005-04-21 Mikhail Khodjaiants
	Bug 80175: Replace the CDT source lookup by the source lookup provided by Eclipse platform.
	* CDebugModelPresentation.java
	* ICDebugHelpContextIds.java
	* CDebugPreferencePage.java
	* PreferenceMessages.properties
	* SourcePreferencePage.java
	* AddContainerAction.java: new
	* AddSourceContainerDialog.java: new
	* DownAction.java: new
	* EditContainerAction.java: new
	* MappingSourceContainerBrowser.java
	* PathMappingDialog.java
	* RemoveAction.java: new
	* SourceContainerAction.java: new
	* SourceContainerLabelProvider.java: new
	* SourceContainerViewer.java: new
	* SourceContainerWorkbenchAdapter.java
	* SourceLookupUIMessages.java: new
	* SourceLookupUIMessages.properties: new
	* UpAction.java: new
	* CDebugUIPlugin.java
	* DefaultSourceLocator.java
	* OldDefaultSourceLocator.java: new
	* plugin.properties

2005-04-12 Mikhail Khodjaiants