@@ -29,3 +29,7 @@ CDirectorySourceContainerDialog.1=&Browse...
 CDirectorySourceContainerDialog.2=Search sub&folders
 CDirectorySourceContainerDialog.3=Choose directory to add:
 CDirectorySourceContainerDialog.4=Directory Selection
+CDirectorySourceContainerDialog.5=The directory path must not be empty
+CDirectorySourceContainerDialog.6=The specified directory doesn't exist
+CDirectorySourceContainerDialog.7=The specified path must be a directory
+CDirectorySourceContainerDialog.8=The specified path must be absolute
