@@ -1,3 +1,8 @@
+2005-04-27 Mikhail Khodjaiants
+	Added path validation to CDirectorySourceContainerDialog.
+	* CDirectorySourceContainerDialog.java
+	* SourceLookupUIMessages.properties
+
 2005-04-25 Mikhail Khodjaiants
 	Added the new source container type (CDirectorySourceContainer) to provide 
 	the UI support for the subfolders search.
